--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <div class="card">
             <span class="blu"></span>
             <div class="checkout">
-                <img src="assets/chip.png" class="loading-icon" style="width: 40px;">
-              <img src="assets/wifi.png" class="trailiing-icon" style="width: 40px;">
+                <img src="assets/chip.png" class="chip-icon" style="width: 40px;">
+              <img src="assets/wifi.png" class="wifi-icon" style="width: 40px;">
               <div class="card-info">
                 <div class="card-holder">
                   Jonathan Michael
@@ -149,15 +149,14 @@
                     <div class="aside left"></div>
                     <div class="aside right"></div>
                 </div>
-                
+                <div class="payment-info">
+                    <p>You have to pay</p>
+                    <p class="amount">
+                      <span class="bold">$549.99</span> USD
+                    </p>
+                    <span class="teller"><img src="assets/docket.png" alt=""></span>
+                </div>
             </div>
-            <div class="payment-info">
-                <p>You have to pay</p>
-                <p class="amount">
-                  <span class="bold">$549.99</span> USD
-                </p>
-                <span class="teller"><img src="assets/docket.png" alt=""></span>
-              </div>
         </div>
     </div>
 
