--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="main">
-                            <input type="text" placeholder="327" style=" width: 350px; font-weight: 500; outline: #025efe; border: none;">
+                            <input type="text" placeholder="327" style=" width: 300px; font-weight: 500; outline: #025efe; border: none;">
                             <img src="assets/dots.svg" class="trailing-icon" style="width: 26px;">
                         </div>
                     </div>
@@ -78,11 +78,11 @@
                             </div>
                         </div>
                         <div class="main">
-                            <input type="text" placeholder="327" style=" width: 150px; font-weight: 500; outline: #025efe; border: none;">
+                            <input type="text" placeholder="327" style=" width: 100px; font-weight: 500; outline: #025efe; border: none;">
                         </div>
                         <span>/</span>
                         <div class="main">
-                            <input type="text" placeholder="327" style=" width: 150px; font-weight: 500; outline: #025efe; border: none;">
+                            <input type="text" placeholder="327" style=" width: 100px; font-weight: 500; outline: #025efe; border: none;">
                         </div>
                     </div>
                     <div class="input-group __col">
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <div class="main">
-                            <input type="text" placeholder="●●●●●●●●●●●●" style=" width: 350px; font-weight: 500; outline: #025efe; border: none;">
+                            <input type="text" placeholder="●●●●●●●●●●●●" style=" width: 300px; font-weight: 500; outline: #025efe; border: none;">
                             <img src="assets/dots.svg" class="trailiing-icon" style="width: 26px;">
                         </div>
                     </div>
@@ -150,10 +150,12 @@
                     <div class="aside right"></div>
                 </div>
                 <div class="payment-info">
-                    <p>You have to pay</p>
-                    <p class="amount">
-                      <span class="bold">$549.99</span> USD
-                    </p>
+                    <div class="price">
+                        <p>You have to pay</p>
+                        <p class="amount">
+                          <span class="bold">$549.</span><span class="sub">99</span> USD
+                        </p>
+                    </div>
                     <span class="teller"><img src="assets/docket.png" alt=""></span>
                 </div>
             </div>
