close-btn added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="close-btn">
+            <img src="assets/close.svg" alt="">
+        </div>
         <div class="form">
             <header class="form-header">
                 <div class="logo">
